--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
+#配置端口号
 server:
   port: 80
+#配置数据源
 spring:
   datasource:
     druid:
@@ -7,9 +9,12 @@ spring:
       url: jdbc:mysql://localhost:3306/mp
       username: root
       password: root
-
+#配置表名前缀和ID自增长
 mybatis-plus:
   global-config:
     db-config:
       table-prefix: tbl_
       id-type: auto
+  #日志
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
